--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   #for state management
-  get: ^4.6.5
+  get: ^4.6.6
   #for use restapis
-  http: ^1.1.0
+  http: ^0.13.6
   shared_preferences: ^2.2.0
   fluttertoast: ^8.2.2
   #for integrating firebase
@@ -68,6 +68,8 @@ dependencies:
   pinput: ^3.0.1
   #rating bar
   flutter_rating_bar: ^4.0.1
+  #email and otp verification_code_builder:
+  email_otp: ^2.0.1
 
 
 dev_dependencies:
