--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   url_launcher: ^6.2.1
   iconsax: ^0.0.8
   another_flushbar: ^1.12.30
+  flutter_spinkit: ^5.2.0
 
 
 dev_dependencies:
