--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   iconsax: ^0.0.8
   another_flushbar: ^1.12.30
   flutter_spinkit: ^5.2.0
+  easy_image_viewer: ^1.2.1
 
 
 dev_dependencies:
