--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   another_flushbar: ^1.12.30
   flutter_spinkit: ^5.2.0
   easy_image_viewer: ^1.2.1
+  rating_summary: ^1.0.2+1
 
 
 dev_dependencies:
