--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   easy_image_viewer: ^1.2.1
   rating_summary: ^1.0.2+1
+  line_icons: ^2.0.3
 
 
 dev_dependencies:
