--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,10 @@ dependencies:
   flutter_spinkit: ^5.2.0
   easy_image_viewer: ^1.2.1
   rating_summary: ^1.0.2+1
-  line_icons: ^2.0.3
+
+  liquid_pull_to_refresh: ^3.0.1
+  custom_refresh_indicator: ^3.0.0
+
 
 
 dev_dependencies:
