--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.1
   custom_refresh_indicator: ^3.0.0
   firebase_crashlytics: ^3.4.9
+  firebase_performance: ^0.9.3+8
 
 
 
@@ -116,6 +117,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
