--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,9 @@
 name: pgroom
 description: A new Flutter project.
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
+
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+
 version: 1.0.0+1
 
 environment:
@@ -39,7 +27,7 @@ dependencies:
   #for state management
   get: ^4.6.6
   #for use restapis
-  http: ^0.13.6
+  http: ^1.1.2
 
   fluttertoast: ^8.2.2
   #for integrating firebase
@@ -75,7 +63,7 @@ dependencies:
   # check internet connection_notifier:
   connectivity_plus: ^5.0.1
   #date format
-  intl: ^0.18.1
+  intl: ^0.19.0
   logger: ^2.0.2+1
   url_launcher: ^6.2.1
   iconsax: ^0.0.8
@@ -88,6 +76,7 @@ dependencies:
   custom_refresh_indicator: ^3.0.0
   firebase_crashlytics: ^3.4.9
   firebase_performance: ^0.9.3+8
+  lottie: ^2.7.0
 
 
 
@@ -101,7 +90,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
