--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   firebase_crashlytics: ^3.4.9
   firebase_performance: ^0.9.3+8
   lottie: ^2.7.0
+  onesignal_flutter: ^5.1.2
 
 
 
