--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,10 @@ dependencies:
   latlong2: ^0.9.1
   animated_text_kit: ^4.2.2
   progress_state_button: "^1.0.4"
+  google_mobile_ads: ^5.0.0
+  provider: ^6.1.2
+  upgrader: ^10.3.0
+  device_info_plus: ^10.1.0
 
 
 
