--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -89,6 +89,7 @@ dependencies:
   provider: ^6.1.2
   permission_handler: ^11.3.1
   package_info_plus: ^8.0.0
+  change_app_package_name: ^1.1.0
 
 
 
