--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,6 @@ dependencies:
   flutter_spinkit: ^5.2.0
   easy_image_viewer: ^1.2.1
   rating_summary: ^1.0.2+1
-
   liquid_pull_to_refresh: ^3.0.1
   custom_refresh_indicator: ^3.0.0
   firebase_crashlytics: ^3.4.9
@@ -90,6 +89,7 @@ dependencies:
   permission_handler: ^11.3.1
   package_info_plus: ^8.0.0
   change_app_package_name: ^1.1.0
+  share_plus: ^9.0.0
 
 
 
