--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,16 +80,20 @@ dependencies:
   google_nav_bar: ^5.0.6
   line_icons: ^2.0.3
   gap: ^3.0.1
-  location_picker_flutter_map: ^3.0.1
+
   latlong2: ^0.9.1
   animated_text_kit: ^4.2.2
-  progress_state_button: "^1.0.4"
+  progress_state_button: ^1.0.4
   google_mobile_ads: ^5.0.0
   provider: ^6.1.2
   permission_handler: ^11.3.1
   package_info_plus: ^8.0.0
   change_app_package_name: ^1.1.0
   share_plus: ^9.0.0
+  location_picker_flutter_map: ^3.0.1
+  geolocator: ^10.1.1
+  geocoding: ^2.1.0
+  uuid: ^3.0.7
 
 
 
