--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
 
   #for state management
   get: ^4.6.6
-  #for use restapis
+  #for use restapi
   http: ^1.1.2
 
   fluttertoast: ^8.2.2
@@ -36,13 +36,13 @@ dependencies:
   google_sign_in: ^6.1.5
   #for handling firebase authentication
   firebase_auth: ^4.20.0
-  # for scessing cloud firestore database
+  # for scenting cloud firestorm database
   cloud_firestore: ^4.17.5
   #Forfor showing network image
   cached_network_image: ^3.2.3
   #for pick image
   image_picker: ^1.0.4
-  #for accessing firebase storege (for uploading files)
+  #for accessing firebase storage (for uploading files)
   firebase_storage: ^11.7.7
   #for showing Emojis
   emoji_picker_flutter: ^2.2.0
@@ -58,7 +58,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   #email and otp verification_code_builder:
   email_otp: ^2.0.1
-  #login sharedPrefence
+  #login sharedPresence
   shared_preferences: ^2.2.2
   # check internet connection_notifier:
   connectivity_plus: ^6.0.3
