--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -12,6 +12,10 @@ pluginManagement {
 
     plugins {
         id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
+        id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+        id "com.android.application" version "7.3.0" apply false
+        id "org.jetbrains.kotlin.android" version "2.0.0" apply false
+
     }
 }
 
