--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,10 +11,14 @@ buildscript {
         classpath 'com.google.firebase:perf-plugin:1.4.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
         // END: FlutterFire Configuration
-        classpath 'com.android.tools.build:gradle:7.3.0'
+         classpath 'com.android.tools.build:gradle:7.3.0'
+        //classpath 'com.android.tools.build:gradle:8.1.0'
+
 
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+
+
 }
 
 allprojects {
@@ -35,3 +39,5 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+
