--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,6 +107,7 @@ dependencies:
   shimmer: ^3.0.0
   multi_image_picker_view: ^2.0.1
   google_maps_flutter: ^2.9.0
+  infinite_scroll_pagination: ^4.1.0
 
   
 
