--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -108,6 +108,7 @@ dependencies:
   multi_image_picker_view: ^2.0.1
   google_maps_flutter: ^2.9.0
   infinite_scroll_pagination: ^4.1.0
+  sqflite: ^2.4.1
 
   
 
