--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,26 @@ android {
             signingConfig signingConfigs.release
         }
     }
+
+
+    flavorDimensions += "default"
+
+    productFlavors {
+        create("dev") {
+            dimension = "default"
+            resValue "string", "app_name", "Appixo dev"
+            applicationIdSuffix ".dev"
+        }
+        create("uat") {
+            dimension = "default"
+            resValue "string", "app_name", "Appixo uat"
+            applicationIdSuffix ".uat"
+        }
+        create("prod") {
+            dimension = "default"
+            resValue "string", "app_name", "Appixo"
+        }
+    }
 }
 
 flutter {
