--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="${applicationId}">
 
 
-    <uses-feature
+<uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
 
@@ -36,9 +36,11 @@
 
     <application
         android:name="${applicationName}"
+        android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:hardwareAccelerated="true"
-        android:label="Appixo">
+
+        >
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
@@ -69,10 +71,10 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="you google admob id" />"/>
+            android:value="ca-app-pub-2907991407152083~6630431809"/>
 
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="you google map api key"/>
+            android:value="AIzaSyAwsLCabPSfnXi7Mq2JV3vzl4Xjl1nMB1Y"/>
 
     </application>
 </manifest>
