--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,7 +109,8 @@ dependencies:
   google_maps_flutter: ^2.9.0
   infinite_scroll_pagination: ^4.1.0
   sqflite: ^2.4.1
-
+  flutter_flavorizr: ^2.2.3
+  flutter_dotenv: ^5.2.1
   
 
 
