--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,15 @@
 .history
 .svn/
 migrate_working_dir/
+android/local.properties
+
 
 # IntelliJ related
 *.iml
 *.ipr
 *.iws
 .idea/
+*.env
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
