--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -79,10 +79,10 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-2907991407152083~6630431809"/>
+            android:value="${GOOGLE_ADMOB_API_KEY}"/>
 
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAwsLCabPSfnXi7Mq2JV3vzl4Xjl1nMB1Y"/>
+            android:value="${GOOGLE_MAPS_API_KEY}"/>
 
     </application>
 </manifest>
