--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,6 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
+GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
+GOOGLE_ADMOB_API_KEY=${GOOGLE_ADMOB_API_KEY}
+
